complete privacy page & fix readme

--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,6 +1,6 @@
 <div class="privacy_body">
   <div class="privacy_title">Terms & Conditions</div>
-  <div class="privacy_subtitle">Last updated on 1/9/2022</div>
+  <div class="privacy_subtitle">Last updated on 16/10/2022</div>
   <div class="headerline">
 
   </div>
@@ -10,32 +10,31 @@
   <div class="top_all_button">
     <div class="down_button" (click)="scrollToBottom()">Scroll To Bottom</div>
   </div>  
+  <!--
   <div *ngFor="let item of privacyContent">
     <h1>{{item.title}}</h1>
     <p>{{item.content}}</p>
   </div>
-  <!-- <h1>1. Clause 1</h1>
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra condimentum eget purus in. 
-      Consectetur eget id morbi amet amet, in. Ipsum viverra pretium tellus neque. 
-      Ullamcorper suspendisse aenean leo pharetra in sit semper et. Amet quam placerat sem.</p>
-  <h1>1. Clause 1</h1>
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra condimentum eget purus in. 
-      Consectetur eget id morbi amet amet, in. Ipsum viverra pretium tellus neque. 
-      Ullamcorper suspendisse aenean leo pharetra in sit semper et. Amet quam placerat sem.</p>
-  <h1>1. Clause 1</h1>
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra condimentum eget purus in. 
-      Consectetur eget id morbi amet amet, in. Ipsum viverra pretium tellus neque. 
-      Ullamcorper suspendisse aenean leo pharetra in sit semper et. Amet quam placerat sem.</p>
-  <h1>1. Clause 1</h1>
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra condimentum eget purus in. 
-      Consectetur eget id morbi amet amet, in. Ipsum viverra pretium tellus neque. 
-      Ullamcorper suspendisse aenean leo pharetra in sit semper et. Amet quam placerat sem.</p>
-  <h1>1. Clause 1</h1>
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra condimentum eget purus in. 
-      Consectetur eget id morbi amet amet, in. Ipsum viverra pretium tellus neque. 
-      Ullamcorper suspendisse aenean leo pharetra in sit semper et. Amet quam placerat sem.</p> -->
+  -->
+  <h1>Privacy Policy</h1>
+  <p> Wose App is a fitness service powered by team Makka Pakka. You can choose from a catalog of workouts led by expert trainers.</p>
+  <p> Wose App is designed to protect your information. When you download the Wose, 
+    we collect information about your browsing activity, including the workout previews you watch, 
+    and about any marketing campaign that led you to the app. 
+    We may collect information about your browsing activity in Wose, such as the pages you view, 
+    the features with which you interact, 
+    and actions that cause you to enter and exit the app such as following an external link that leads you to Wose. 
+    We also collect some demographic information including your gender and age range. 
+    This information is associated with your User ID and is used to improve the service.</p>
+  <br>
+  <h1>Activity Sharing</h1>
+  <p> In the Wose, your Workout and Activity data will be shared with friends, 
+    and Makka Pakka will retain your Workout and Activity data 
+    for a short period of time and will use this data only to enable the Sharing feature. 
+    This data may include: active calories, exercise minutes, time zone, 
+    and workout information such as title, type, and duration. </p>
     <div class="top_all_button">
-      <div class="accept_button">Accept & Continue</div>
+      <div class="accept_button" [routerLink]="['/signup']">Accept & Continue</div>
       <div class="top_button" (click)="scrollToTop()" >Scroll To Top </div>
     </div>
   </div>
