--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -41,6 +41,7 @@
 
 .accept_button{
     margin-bottom: 5%;
+    margin-top: 60px;
     border-left: 25px solid;
     border-right: 25px solid;
     border-top: 10px solid;
