--- a/src/app/community/community.component.html
+++ b/src/app/community/community.component.html
@@ -1,62 +1,62 @@
 <ion-content>
   <app-bg-interfaces></app-bg-interfaces>
-  <!-- <div class="title">
-      <br>
-      <div class="header">
-        <div class="h_png">
-            
-            <img src="../../assets/image/dashboard/Ellipse 3.svg" alt="" class="img">
-        </div>
-        <div class="ipt">
-            <input type="text" class="iipt">
-        </div>
+  <div class="title">
+    <br>
+    <div class="header">
+      <div class="h_png">
+
+        <img src="../../assets/image/dashboard/Ellipse 3.svg" alt="" class="img">
+      </div>
+      <div class="ipt">
+        <input type="text" class="iipt">
+      </div>
     </div>
 
-        <div class="card">
-            <div class="a_title">
-              <b><span class="span1">FRIENDS</span></b>
-            </div>
-           
-            <div class="png_head">
-              <div class="img_h">
-                  
-              </div>
-              <div class="text_h">
-                  <b><span>Jacob Jones</span></b>
-              </div>
-            </div>
-            
-            <div class="png_head">
-              <div class="img_h">
-                  
-              </div>
-              <div class="text_h">
-                  <b><span>Jacob Jones</span></b>
-              </div>
-            </div>
+    <div class="card">
+      <div class="a_title">
+        <b><span class="span1">FRIENDS</span></b>
+      </div>
 
-            <div class="png_head">
-              <div class="img_h">
-                  
-              </div>
-              <div class="text_h">
-                  <b><span>Jacob Jones</span></b>
-              </div>
-            </div>
+      <div class="png_head">
+        <div class="img_h">
 
-            <div class="png_head">
-              <div class="img_h">
-                  
-              </div>
-              <div class="text_h">
-                  <b><span>Jacob Jones</span></b>
-              </div>
-            </div>
         </div>
+        <div class="text_h">
+          <b><span>Jacob Jones</span></b>
+        </div>
+      </div>
 
-    </div> -->
+      <div class="png_head">
+        <div class="img_h">
 
-  <ion-list>
+        </div>
+        <div class="text_h">
+          <b><span>Jacob Jones</span></b>
+        </div>
+      </div>
+
+      <div class="png_head">
+        <div class="img_h">
+
+        </div>
+        <div class="text_h">
+          <b><span>Jacob Jones</span></b>
+        </div>
+      </div>
+
+      <div class="png_head">
+        <div class="img_h">
+
+        </div>
+        <div class="text_h">
+          <b><span>Jacob Jones</span></b>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- <ion-list>
     <ion-item *ngFor="let friend of Friends">
       <ion-label>
         <h2>{{friend.user_id}}</h2>
@@ -66,7 +66,7 @@
 
 
     </ion-item>
-  </ion-list>
+  </ion-list> -->
 
   <app-navbar></app-navbar>
 </ion-content>
