--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,9 +12,7 @@
     <h1 class="h1">HELLO , {{userProfile.uname}}  </h1>
     <div class="ASYNC">
       <div class="Hhead">
-        <h2>&emsp;WORKOUT TOGETHER</h2>
-        <br>
-
+        <h2 class="dash_work_word">&emsp;WORKOUT TOGETHER</h2>
       </div>
       <br/>
       <div class="ddd" *ngFor="let tutorial of tutorialsByKeyword;">
@@ -25,13 +23,11 @@
         <span class="span">{{tutorial.name}}</span>
       </div>
     </div>
-
     <br>
     <br>
     <div class="foter">
-
       <div class="header_x">
-        <h2>&emsp;LIVES WORKOUT</h2>
+        <h2 class="dash_live_word">&emsp;LIVES WORKOUT</h2>
       </div>
       <div *ngFor="let tutorial of tutorials;" class="Journalism">
         <div class="left_p">
@@ -39,7 +35,6 @@
         </div>
         <div class="right_p">
           <span style="font-weight: bold">{{tutorial.name}}</span>
-          <br>
           <br>
           <img src="../../assets/image/element/face.svg" alt=""><span> {{tutorial.coach}}</span>
           <br>
@@ -49,8 +44,7 @@
       <br>
     </div>
   </div>
-
-  <app-navbar></app-navbar>
 </ion-content>
+<app-navbar></app-navbar>
     
      
