--- a/src/app/my/my.component.html
+++ b/src/app/my/my.component.html
@@ -32,19 +32,19 @@
       <div class="container">
         <div class="achievement">
           <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
-          <div class="achievement-name">Upload data once</div>
+          <div class="achievement-name">Burned 100 calories</div>
         </div>
         <div class="achievement">
           <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
-          <div class="achievement-name">Do a workout</div>
+          <div class="achievement-name">Burned 200 calories</div>
         </div>
         <div class="achievement">
           <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
-          <div class="achievement-name">Set a goal</div>
+          <div class="achievement-name">Burned 500 calories</div>
         </div>
         <div class="achievement">
           <img src="assets/image/element/image 2.svg" alt="achievement" class="achievement-img">
-          <div class="achievement-name">Enter the leaderboard</div>
+          <div class="achievement-name">Burned 1000 calories</div>
         </div>
       </div>
     </div>
