intake and calorie input fix & button and frame fix

--- a/src/app/calculate/calculate.component.html
+++ b/src/app/calculate/calculate.component.html
@@ -26,7 +26,7 @@
 
         <div class="elements">
           <!-- <input type="submit" value="confirm" id="confirm-button" (click)="sendApiRequest()"> -->
-          <ion-button class="but" type="submit" expend="block">NEXT</ion-button>
+          <ion-button shape="round" class="but" type="submit" expend="block">NEXT</ion-button>
         </div>
       </form>
     </div>
