--- a/src/app/my/my.component.html
+++ b/src/app/my/my.component.html
@@ -54,11 +54,9 @@
     <p class="title">Meal suggestions</p>
     <app-suggestions></app-suggestions>
   </div>
-
-  <ion-button id="logout_button" (click)="logOut()">
-    log out
-  </ion-button>
-
+  <div class="logout_form">
+    <ion-button shape="round" class="logout_button" (click)="logOut()">Log out</ion-button>
+  </div>
 </ion-content>
 
 <app-navbar></app-navbar>
