--- a/src/app/signup2/signup2.component.html
+++ b/src/app/signup2/signup2.component.html
@@ -29,6 +29,6 @@
   </div>
 
   <div class="firstpage_button">
-    <ion-button type="submit" class="firstpage_button1" fill="clear" [routerLink]="['/signup3']">NEXT</ion-button>
+    <ion-button shape="round" type="submit" class="firstpage_button1" fill="clear" [routerLink]="['/signup3']">NEXT</ion-button>
   </div>
 </form>
