--- a/src/app/signup3/signup3.component.html
+++ b/src/app/signup3/signup3.component.html
@@ -16,7 +16,7 @@
     </div>
 
   <div class="firstpage_button">
-    <ion-button type="submit" class="firstpage_button1" [routerLink]="['/teaching']">FINISH</ion-button>
+    <ion-button shape="round" type="submit" class="firstpage_button1" [routerLink]="['/teaching']">FINISH</ion-button>
   </div>
   </div>
 </form>
