--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -20,14 +20,25 @@
     left: 5%;
     z-index: 1;
   }
+
+  .login_content{
+    overflow: scroll;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 3%;
+    height: 55%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
   
   .login_title{
     font-size: 40px;
     font-weight:800;
-    position: absolute;
-    bottom: 50%;
-    left: 0;
-    right: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,10 +46,6 @@
   }
 
   .login_input{
-    position: absolute;
-    bottom: 30%;
-    left: 0;
-    right: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,14 +59,11 @@
   }
 
   .forgot_password_button{
-    position: absolute;
-    bottom: 28%;
-    left: 50%;
-    right: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
+    width: 100%;
   }
 
   .forgot_password_button_inside{
@@ -67,28 +71,21 @@
   }
 
   .firstpage_button{
-    position: absolute;
-    bottom: 20%;
-    flex: 1;
-    left: 0;
-    right: 0;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    width: 100%;
   }
 
   .firstpage_button1{
-    border-left: 100px solid;
-    border-right: 100px solid;
-    border-top: 10px solid;
-    border-bottom: 10px solid;
-    border-radius: 18px;
-    font-size: large;
-    background: #F19D6E;
-    border-color: #F19D6E;
+    width: 300px;
+    height: 36px;
+    font-size: large; 
     color: white;
     font-weight: bold;
-    --background:none;
+    --background:#F19D6E;
+    --background-focused: none !important;
+    --background-hover: none !important;
   }
 
   hr{
@@ -96,19 +93,15 @@
   }
 
   .or_word{
-    position: absolute;
-    bottom: 15%;
-    left: 0;
-    right: 0;
     display: flex;
     color: gray;
+    align-items: center;
+    width: 100%;
   }
 
   .google_button{
-    position: absolute;
-    bottom: 6%;
-    left: 10%;
-    right: 10%;
+    width: 300px;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -119,10 +112,7 @@
   }
 
   .bottom_word{
-    position: absolute;
-    bottom: 3%;
-    left: 10%;
-    right: 10%;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
