--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -9,33 +9,36 @@
     <div class="signup_person">
         <img id="signup_img_person" src="../../assets/image/signup_login/signup_person.svg" alt="">
     </div>
-    <div class="signup_title">Sign up</div>
 
-    <div class="signup_input">
-        <div id="signup_input_inside">
-            <img src="../../assets/image/signup_login/email_icon.svg">
-            <ion-item>
-            <ion-input formControlName="email" type="email" ngModel [email]="true" placeholder="email@domain.com" [(ngModel)]="this.user_profileService.userProfile.email"></ion-input>
-            </ion-item>
+    <div class="sign_content">
+        <div class="signup_title">Sign up</div>
+
+        <div class="signup_input">
+            <div id="signup_input_inside">
+                <img src="../../assets/image/signup_login/email_icon.svg">
+                <ion-item>
+                <ion-input formControlName="email" type="email" ngModel [email]="true" placeholder="email@domain.com" [(ngModel)]="this.user_profileService.userProfile.email"></ion-input>
+                </ion-item>
+            </div>
+            <div id="signup_input_inside">
+                <img src="../../assets/image/signup_login/username_icon.svg">
+                <ion-item>
+                <ion-input formControlName="uname" type="text" placeholder="Username" [(ngModel)]="this.user_profileService.userProfile.uname"></ion-input>
+                </ion-item>
+            </div>
+            <div id="signup_input_inside">
+                <img src="../../assets/image/signup_login/password_icon.svg">
+                <ion-item>
+                <ion-input formControlName="password" type="password" placeholder="Password" [(ngModel)]="this.user_profileService.userProfile.password"></ion-input>
+                </ion-item>
+            </div>
         </div>
-        <div id="signup_input_inside">
-            <img src="../../assets/image/signup_login/username_icon.svg">
-            <ion-item>
-            <ion-input formControlName="uname" type="text" placeholder="Username" [(ngModel)]="this.user_profileService.userProfile.uname"></ion-input>
-            </ion-item>
+        <div class="bottom_word">By signing up, you’re agree to our 
+            <a [routerLink]="['/privacypolicy']" >Terms & Conditions</a> and <a [routerLink]="['/privacypolicy']">Privacy Policy</a>
         </div>
-        <div id="signup_input_inside">
-            <img src="../../assets/image/signup_login/password_icon.svg">
-            <ion-item>
-            <ion-input formControlName="password" type="password" placeholder="Password" [(ngModel)]="this.user_profileService.userProfile.password"></ion-input>
-            </ion-item>
+        <div class="firstpage_button">
+            <ion-button shape="round" type="submit" class="firstpage_button1" fill="clear" [routerLink]="['/signup2']">NEXT</ion-button>
         </div>
-    </div>
-    <div class="bottom_word">By signing up, you’re agree to our 
-        <a [routerLink]="['/privacypolicy']" >Terms & Conditions</a> and <a [routerLink]="['/privacypolicy']">Privacy Policy</a>
-    </div>
-    <div class="firstpage_button">
-        <ion-button type="submit" class="firstpage_button1" fill="clear" [routerLink]="['/signup2']">NEXT</ion-button>
     </div>
 </div>
 </form>
