--- a/src/app/exercise-live-video/exercise-live-video.component.html
+++ b/src/app/exercise-live-video/exercise-live-video.component.html
@@ -5,7 +5,7 @@
       <iframe width="100%" height="100%" [src]="safeUrl" allow="autoplay" allowfullscreen></iframe>
     </div>
     <div class="btn">
-      <button class="btnn" (click)="goToExerciseFinishPage()">Finished</button>
+      <button class="btnn" (click)="goToExerciseFinishPage()">Finish</button>
     </div>
     <div class="text">
       <b><span>User exercising</span></b>
