--- a/src/app/exercise-live-video/exercise-live-video.component.scss
+++ b/src/app/exercise-live-video/exercise-live-video.component.scss
@@ -72,15 +72,16 @@
     margin-top: 100px;
     border-radius: 20px;
     background-color: white;
+    position: relative;
 }
 
 .x{
     width: 20px;
     height: 20px;
     position: absolute;
-    left: 330px;
-    top: 620px;
     font-size: 20px;
+    right: 10px;
+    top: 10px;
 }
 
 .z_img{
