--- a/src/app/community/community.component.scss
+++ b/src/app/community/community.component.scss
@@ -25,7 +25,8 @@
 
 .card {
     width: 90%;
-    height: 540px;
+    height: 100%;
+    //height: 540px;
     margin-left: 15px;
     background: white;
     border-radius: 20px;
@@ -53,6 +54,8 @@
     margin-left: 30px;
     padding-bottom: 5px;
     border-bottom: 2px solid black;
+    background-color: white;
+    border-radius: 20px;
 }
 
 .img_h{
