signup validator & router change

--- a/src/app/resetpw/resetpw.component.html
+++ b/src/app/resetpw/resetpw.component.html
@@ -17,5 +17,5 @@
     </div>
 
     <div class="button_confirm">
-        <div class="button_inside" [routerLink]="['/']" >CONFIRM</div>
+        <div class="button_inside" [routerLink]="['/resetpw']" >CONFIRM</div>
     </div>
