--- a/src/app/verifyemail/verifyemail.component.html
+++ b/src/app/verifyemail/verifyemail.component.html
@@ -24,8 +24,8 @@
         </div>
     </div>
     <div class="button_opt">
-        <div class="button_inside" [routerLink]="['/']" >GET OPT</div>
+        <div class="button_inside" [routerLink]="['/login']" >GET OPT</div>
     </div>
     <div class="button_verify">
-        <div class="button_inside" [routerLink]="['/resetpw']" >VERIFY</div>
+        <div class="button_inside" [routerLink]="['/login']" >VERIFY</div>
     </div>
